# cuda-agent

./: .gitignore  LICENSE  README.md  cuda_samples.yaml  pyproject.toml
.github/workflows/: tests.yml
docs/: cli.md  config-schema.md  design.md  release-checklist.md  testing.md
examples/: annotated_cuda_samples.yaml  node_cmd.yaml  python_cmd.yaml
fixtures/node_smoke/: README.md  agent.yaml  package.json
fixtures/node_smoke/scripts/: bench.js  build.js
fixtures/node_smoke/src/: index.js
fixtures/node_smoke/test/: smoke.test.js
fixtures/python_smoke/: README.md  agent.yaml  pyproject.toml
fixtures/python_smoke/src/python_smoke/: __init__.py  bench.py  core.py
fixtures/python_smoke/tests/: test_core.py
src/cuda_agent/adapters/: build.py  parse.py  process.py  targets.py  test.py
src/cuda_agent/cli/: __main__.py  main.py
src/cuda_agent/config/: __init__.py  errors.py  interpolate.py  loader.py  validate.py
src/cuda_agent/pipeline/: baseline.py
src/cuda_agent/run_support/: artifacts.py  compare.py  environment.py  reporting.py  summary.py
src/cuda_agent/storage/: index.py
tests/: test_config_validate.py  test_pipeline.py  test_targets.py
